Added ConfigParser for .properties files in GameModel. Added tests on GameModel